Add build support for Java 25